[package]
name = "meshme"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", default-features = false, features = ["animation", "gltf", "renderer"] }
log = "0.4.8"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
