[package]
name = "meshme"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", default-features = false, features = ["animation", "gltf", "renderer"] }
gltf = "0.15"
log = "0.4.8"

# For importer code, should be exposed by `amethyst_gltf`
base64 = "0.11"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
